# pytest_new

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .testmondata  666.md  CHANGELOG.md  Makefile  README.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_test.bat  run_test.ps1  yaml_to_test_watcher.py  优化实施总结.md  未命名.md  继续优化.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
docs/: API.md  architecture.md  assertion-debugging-optimization.md  quick-start.md  user-guide.md  使用指南.md  并行测试优化.md
fixtures/: __init__.py
pytest_new_opt/: __init__.py
pytest_new_opt/fixtures/: __init__.py  assertions.py
reports/: report.html
scripts/: check_test_naming.py  cli.py  configure_jenkins.py
specs/: layered-optimization-plan-777.md  optimization-specification-666.md
src/: exceptions.py
src/allure/: __init__.py  helper.py
src/config/: __init__.py  constants.py  logging_config.py  parser.py  settings.py  yaml_loader.py
src/core/: __init__.py  base_page.py  base_test.py
src/pytest_runner/: __init__.py  base_test_case.py  test_runner.py
src/pywinauto/action_executors/: __init__.py  base_executor.py  basic_executors.py  executor_factory.py
src/pywinauto/app_manager/: __init__.py  application_manager.py
src/pywinauto/assertions/: __init__.py  assertion_factory.py  base_assertion.py  basic_assertions.py
src/pywinauto/controls/: __init__.py  advanced_controls.py  base_control.py  basic_controls.py  complex_controls.py  control_factory.py
src/test_utils/allure/: helper.py
src/utils/: config.py  retry.py  wait.py
tests/: test_login_config_no_assert_new.py
tests/configs/: login_config_no_assert_new.yaml
tests/example/: test_async_example.py  test_fixture_optimization.py  test_mock_example.py  test_parametrization_advanced.py  test_user_auth_best_practice.py
tests/mock/: test_framework_mock.py
tests/templates/: test_config_template.yaml
tests/test_data/: login_data.json
tests/unit/: test_config.py  test_exceptions.py  test_retry.py  test_settings.py
