[project]
name = "pytest_new_opt"
version = "0.1.0"
authors = [
    { name = "walkzzz", email = "your-email@example.com" }
]
description = "Enhanced pytest UI automation framework with custom fixtures and best practices"
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.0.2",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.2.0",
    "pytest-cov>=7.0.0",
    "pytest-testmon>=2.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-rerunfailures>=13.0.0",
    "pywinauto>=0.6.8",
    "allure-pytest>=2.13.5",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.1",
    "pillow>=11.1.0",
    "mss>=9.0.1",
    "opencv-python>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "flake8>=7.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pytest-sugar>=0.9.7",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.flake8]
max-line-length = 120
ignore = ["E203", "W503"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "src/*/__init__.py",
    "src/*/config.py",
    "tests/*"
]

[tool.coverage.report]
show_missing = true
fail_under = 80
format = ["html", "xml"]

[tool.pytest]
asyncio_mode = "auto"

[tool.pytest.plugins]
# 指定需要加载的插件，避免全量扫描
# 注释：pytest 8.x+ 支持此配置，加速启动
required = [
    "pytest_html",
    "pytest_cov",
    "pytest_xdist",
    "allure_pytest",
    "pytest_asyncio",
    "pytest_rerunfailures",
]
